namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "playground"
  labels:
    name: "playground"
