MongDB.yaml

---
# create deployment for Mongdb pod
apiVersion: mongodb.com/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: playground
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb_container
  template:
    metadata:
      labels:
        app: mongodb_container
    specs:
      containers:
      - name:  mongodb
        image:  mongo
        ports:
        - containerPort: 27017
