mongodb.yaml
---
# create deployment for Mongdb pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: playground
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-container
  template:
    metadata:
      labels:
        app: mongodb-container
    spec:
      containers:
      - name:  mongodb-container
        image:  mongo
        ports:
         - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name:  mongo-service
spec:
  selector:
    app:  mongodb
  ports:
  - protocal: TCP
    port: 27017
    targetPort: 27017
